Add EAS configuration and enhance drill descriptions with instructions

--- a/app.json
+++ b/app.json
@@ -36,6 +36,20 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "f057c5d2-54b1-4d5a-a2f2-19100c45223b"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/f057c5d2-54b1-4d5a-a2f2-19100c45223b"
     }
   }
 }
