--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "expo-system-ui": "~4.0.7",
     "expo-updates": "~0.26.12",
     "expo-web-browser": "~14.0.2",
+    "i18next": "^24.2.2",
     "install": "^0.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.0",
     "react-native": "0.76.6",
     "react-native-circular-progress": "^1.4.1",
     "react-native-draggable-flatlist": "^4.0.1",
