--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@sentry/react": "^8.51.0",
+    "@sentry/react-native": "^6.5.0",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.4",
+    "expo-dev-client": "~5.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
@@ -36,6 +40,7 @@
     "expo-updates": "~0.26.12",
     "expo-web-browser": "~14.0.2",
     "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
     "install": "^0.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -50,7 +55,8 @@
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "expo-localization": "~16.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
