--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/material-top-tabs": "^7.1.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
+    "@react-navigation/material-top-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.17",
+    "@react-navigation/stack": "^7.2.1",
     "@sentry/react": "^8.51.0",
     "@sentry/react-native": "^6.5.0",
     "expo": "~52.0.25",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.4",
-    "expo-dev-client": "~5.0.10",
+    "expo-dev-client": "~5.0.14",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.4",
@@ -52,18 +52,19 @@
     "react-native-circular-progress": "^1.4.1",
     "react-native-draggable-flatlist": "^4.0.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.11.2",
     "react-native-tts": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
   "devDependencies": {
-    "@react-native-community/cli": "latest",
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native-vector-icons": "^6.4.18",
